Systray: Clean up leaking systrays

Since removing a systray container didn't use to remove the
internal systray containment and all its applets, after a while
especially if default panels are added and removed often,
the applet config file becomes full of orphaned systray containments
that just take up resources and cause misbehaviors

This destroys on startup all org.kde.plasma.private.systray that are not
associated with a particular org.kde.plasma.systray

here went from an appletsrc config file of almost 7000 lines
to under 1000

BUG:472937
CCBUG:404641